separate DBs for prod and dev

--- a/UserManagement.Web/appsettings.Production.json
+++ b/UserManagement.Web/appsettings.Production.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultUMSConnection": "Server=prod-db-server;Database=UserManagement;User=usr;Password=secret;"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
