Setup Basic Data Migration with EF

--- a/UserManagement.Web/appsettings.json
+++ b/UserManagement.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MigrationUMSConnection": "Server=migration-db-server;Database=UserManagement;User=usr;Password=secret;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ProxyTo": ""
+  "ProxyTo": "",
+  "MySQL": {
+    "ServerVersion": "8.0.21"
+  }
 }
