--- a/UserManagement.Web/UserManagement.Web.csproj
+++ b/UserManagement.Web/UserManagement.Web.csproj
@@ -6,7 +6,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-    <PackageReference Include="Westwind.AspNetCore.Markdown" Version="3.23.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
