JWT Services first setup :-) . JwtService generates token , which is used by AuthService when creating a new user. UserService add sets a default pass

--- a/UserManagement.Web/appsettings.json
+++ b/UserManagement.Web/appsettings.json
@@ -12,5 +12,13 @@
   "ProxyTo": "",
   "MySQL": {
     "ServerVersion": "9.4.0"
-  }
+  },
+    "UserSettings": {
+        "UmsDefaultPassword":  "!Password1"
+    },
+    "Ums_Jwt": {
+        "Issuer": "UserManagementAPI",
+        "Audience": "UserManagementUI",
+        "ExpirationMinutes": 60
+    }
 }
